[package]
name = "webe_bench"
version = "0.1.0"
authors = ["WebeWizard <justin.leis@webewizard.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webe_args = { path = "../lib-webe/webe_args" }
futures = "0.3.12"
reqwest = "0.11.0" # requires libssl-dev be installed on system
tokio = { version = "1.2.0", features = ["full"] }