[package]
name = "webe_bench"
version = "0.1.0"
authors = ["WebeWizard <justin.leis@webewizard.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webe_args = { path = "../lib-webe/webe_args" }
futures = "0.3.12"
tokio = { version = "1.2.0", features = ["full"] }
hyper = { version = "0.14.26", features = ["http1","client","tcp"] }
mysql_async = "0.32.2"
dotenvy = "0.15.7"
webe_id = "0.2.0"