[package]
name = "webe_bench"
version = "0.1.0"
authors = ["WebeWizard <justin.leis@webewizard.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webe_args = { git = "https://github.com/WebeWizard/lib-webe", branch = "master" }
futures = "0.3.29"
reqwest = { version = "0.11" }
tokio = { version = "1.35.0", features = ["full"] }
mysql_async = "0.33.0"
dotenvy = "0.15.7"
webe_id = "0.2.0"
